--- a/certificate-dapp/server/package.json
+++ b/certificate-dapp/server/package.json
@@ -11,9 +11,11 @@
   "description": "",
   "dependencies": {
     "@pinata/sdk": "^2.1.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "express-fileupload": "^1.5.1"
+    "express-fileupload": "^1.5.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
